# PwnTensor

./: .cursorrules  .gitignore  Dockerfile  Dockerfile.miner  README.md  docker-compose.yml  env.example  game_registry.py  miner.py  miner_ai.py  protocol.py  pyproject.toml  raw.txt  reward.py  validator.py
.github/workflows/: docker-publish.yml
deploy/: README.md
deploy/base/: configmap.yaml  kustomization.yaml  miner-deployment.yaml  miner-service.yaml  namespace.yaml  nginx-configmap.yaml  service.yaml  validator-deployment.yaml
deploy/local/: config-patch.yaml  kustomization.yaml  validator-patch.yaml
deploy/staging/: config-patch.yaml  ingress.yaml  kustomization.yaml  validator-patch.yaml
frontend/: index.html
frontend/kaz/: index.html
frontend/meleelight/: index.html
knowledge/: INDEX.yaml  game_adapter.yaml  kaz.game.yaml  meleelight.game.yaml  pactensor.frontend.yaml  pactensor.game.yaml  pactensor.scoring.yaml  pwntensor.architecture.yaml
