[project]
name = "pwntensor"
version = "0.1.0"
description = "Game AI subnet on Bittensor — miners compete to build the best ghost AI for PacTensor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bittensor>=8.0.0",
    "bittensor-cli>=9.17.0",
    "bittensor-wallet>=2.0.0",
    "click>=8.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
